--- a/config.conf
+++ b/config.conf
@@ -30207,7 +30207,7 @@ DOMAIN-SUFFIX,zzyytt.top,Reject
 DOMAIN-SUFFIX,zzzhuoxiaqu.online,Reject
 
 #自定义
-DOMAIN-SUFFIX,avedex.cc,Reject
+DOMAIN-SUFFIX,avedex.cc,Proxy
 
 FINAL,proxy
 
